# rapids-dask-dependency

./: .gitignore  .pre-commit-config.yaml  README.md  _rapids_dask_dependency.pth  dependencies.yaml  pyproject.toml  setup.py
.github/: .gitignore  CODEOWNERS  ops-bot.yaml
.github/workflows/: build.yaml  pr.yaml
ci/: build_python.sh  build_wheel.sh  check_dask_versions.py  validate_wheel.sh
ci/release/: update-version.sh
conda/recipes/rapids-dask-dependency/: meta.yaml  recipe.yaml  run_test.sh  run_tests.sh
conda/recipes/rapids_dask_dependency/: meta.yaml
pip/rapids-dask-dependency/: pyproject.toml
pip/rapids_dask_dependency/: pyproject.toml
rapids-dask-dependency/: dask_loader.py
rapids_dask_dependency/: __init__.py  dask_loader.py  importer.py  loaders.py  utils.py
rapids_dask_dependency/patches/dask/: __init__.py  add_patch_attr.py  config_defaults.py  patch_sample.py
rapids_dask_dependency/patches/dask/dataframe/: __rdd_patch_accessor.py  accessor.py
rapids_dask_dependency/patches/distributed/: __init__.py  patch_sample.py  ucx_connect_timeout.py
rapids_dask_dependency/patches/distributed/comm/: __rdd_patch_ucx.py  ucx.py
tests/: test_patch.py  test_ucx.py
