# Copyright (c) 2023-2025, NVIDIA CORPORATION.

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "wheel",
]

[project]
name = "rapids-dask-dependency"
version = "25.06.00a0"
description = "Dask and Distributed version pinning for RAPIDS"
dependencies = [
    "dask==2025.2.0",
    "distributed==2025.2.0",
]
license = { text = "Apache-2.0" }
readme = { file = "README.md", content-type = "text/markdown" }

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["rapids_dask_dependency*"]

[tool.ruff.lint]
select = [
    # pycodestyle (errors)
    "E",
    # isort
    "I",
    # pyflakes
    "F",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # pycodestyle (warnings)
    "W",
]
fixable = ["ALL"]
