# Copyright (c) 2023-2025, NVIDIA CORPORATION.

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "wheel",
]

[project]
name = "rapids-dask-dependency"
version = "25.08.00a0"
description = "Dask and Distributed version pinning for RAPIDS"
dependencies = [
    "dask==2025.5.0",
    "distributed==2025.5.0",
]
license = { text = "Apache-2.0" }
readme = { file = "README.md", content-type = "text/markdown" }

[project.optional-dependencies]
test = [
    "dask-cuda==25.8.*,>=0.0.0a0",
    "distributed-ucxx-cu12==0.45.*,>=0.0.0a0",
    "nvidia-ml-py",
    "pytest",
    "ucx-py-cu12==0.45.*,>=0.0.0a0",
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["rapids_dask_dependency*"]

[tool.ruff.lint]
select = [
    # pycodestyle (errors)
    "E",
    # isort
    "I",
    # pyflakes
    "F",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # pycodestyle (warnings)
    "W",
]
fixable = ["ALL"]
