# Copyright (c) 2023-2026, NVIDIA CORPORATION.

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "wheel",
]

[project]
name = "rapids-dask-dependency"
version = "25.12.01a0"
description = "Dask and Distributed version pinning for RAPIDS"
dependencies = [
    "dask==2025.9.2",
    "distributed==2025.9.2",
]
license = { text = "Apache-2.0" }
readme = { file = "README.md", content-type = "text/markdown" }

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["rapids_dask_dependency*"]

[tool.ruff.lint]
select = [
    # pycodestyle (errors)
    "E",
    # isort
    "I",
    # pyflakes
    "F",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # pycodestyle (warnings)
    "W",
]
fixable = ["ALL"]
