# Copyright (c) 2023, NVIDIA CORPORATION.

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "wheel",
]

[project]
name = "rapids-dask-dependency"
version = "23.12.01a0"
description = "Dask and Distributed version pinning for RAPIDS"
dependencies = [
    "dask==2023.11.0",
    "distributed==2023.11.0",
]
license = { text = "Apache 2.0" }

[tool.setuptools]
license-files = ["LICENSE"]
