# Copyright (c) 2023, NVIDIA CORPORATION.

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "wheel",
]

[project]
name = "rapids-dask-dependency"
version = "24.02.00a0"
description = "Dask and Distributed version pinning for RAPIDS"
dependencies = [
    "dask==2024.1.1",
    "distributed==2024.1.1",
]
license = { text = "Apache 2.0" }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools]
license-files = ["LICENSE"]
