# Copyright (c) 2023, NVIDIA CORPORATION.

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "wheel",
]

[project]
name = "rapids_dask_dependency"
version = "23.12.00a0"
description = "Dask and Distributed version pinning for RAPIDS"
dependencies = [
    "dask @ git+https://github.com/dask/dask.git@main",
    "distributed @ git+https://github.com/dask/distributed.git@main",
]

[tool.setuptools]
license-files = ["LICENSE"]
